--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -29,13 +29,14 @@
   --project-group-container-line-color: #eeeeee;
   --project-group-container-background-color: #ffffff;
   --img-overlay: rgba(47, 48, 58, 0.4);
+  --work-overlaycolor: rgba(47, 48, 58, 0.8);
   --logo-company-border: rgba(175, 177, 184, 1);
   --social-color: #afb1b8;
   --social-footer-backgroundcolor: rgba(255, 255, 255, 0.1);
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: var(--main-color);
   background-color: var(--main-background-colorr);
   font-size: 14px;
@@ -94,7 +95,7 @@ ul {
 /* Logo */
 
 .logo {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   color: var(--accent-blue);
   text-decoration: none;
 
@@ -180,14 +181,14 @@ ul {
 }
 
 .auth-nav .link {
+  display: flex;
+  align-items: center;
+
   color: var(--secondary-color);
   text-decoration: none;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
-  display: flex;
-  align-items: center;
 }
 
 .auth-nav .link:hover,
@@ -231,20 +232,19 @@ ul {
 }
 
 .hero-title {
+  max-width: 696px;
+  height: 120px;
+  margin-top: 0px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+
   color: var(--white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  max-width: 696px;
-  height: 120px;
-
-  margin-top: 0px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* Features */
@@ -263,31 +263,30 @@ ul {
 }
 
 .feature-list .title {
+  margin-top: 30px;
+  margin-bottom: 10px;
+
   font-weight: 700;
   line-height: 1.14;
   font-size: 14px;
   text-transform: uppercase;
-
-  margin-top: 30px;
-  margin-bottom: 10px;
 }
 
 .feature-list .text {
-  color: var(--secondary-color);
-  line-height: 1.71;
-
   margin-top: 0px;
   margin-bottom: 0px;
+
+  color: var(--secondary-color);
+  line-height: 1.71;
 }
 
 /* Features-icones */
 
 .feature-list-elements::before {
   display: block;
-  content: ' ';
+  content: " ";
   height: 120px;
   background: var(--secondary-background-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   background-size: 70px 70px;
   background-repeat: no-repeat;
@@ -318,14 +317,14 @@ ul {
 }
 
 .section-title {
+  margin-top: 0px;
+  margin-bottom: 50px;
+
   color: var(--main-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
-
-  margin-top: 0px;
-  margin-bottom: 50px;
 }
 
 /* Work */
@@ -337,16 +336,38 @@ ul {
 .work {
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
 }
 
 .work-pic {
   display: block;
   margin-bottom: 0px;
   margin-right: 30px;
+
+  position: relative;
+  overflow: hidden;
 }
 
 .work-pic:last-child {
   margin-right: 0px;
+}
+
+.thumb > .label {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  bottom: 0;
+
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.143;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: var(--work-overlaycolor);
 }
 
 /* Our team */
